frame/support/test/tests/pallet_ui/call_invalid_origin.stderr
error: Invalid arg: expect `origin: OriginFor<T>`
  --> $DIR/call_invalid_origin.rs:17:10
   |
17 |         fn foo(foo: u8) {}
   |                ^^^

error: expected `origin`
  --> $DIR/call_invalid_origin.rs:17:10
   |
17 |         fn foo(foo: u8) {}
   |                ^^^
